# bugala_kuc

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab3/: package.xml  setup.py
lab3/lab3/: fk_solver.py  kdl_dkin.py  nonkdl_dkin.py  solver.py
lab3/launch/: kdl.launch.py  lab3.launch.py
lab3/urdf/: dh_table.csv  robot_lab2.rviz
lab4/: package.xml  setup.py
lab4/lab4/: jcmd.py  jint.py  marker.py  nonkdl_dkin.py  ocmd.py  oint.py
lab4/launch/: jint.launch.py  lab4.launch.py  nonkdl.launch.py  oint.launch.py
lab4_interfaces/: CMakeLists.txt  package.xml
lab4_interfaces/srv/: Interpolation.srv  OInterpolation.srv  oInterpolation.srv
lab5/: package.xml  setup.py
lab5/lab5/: ikin.py  ikin_kacper.py  ocmd.py  oint.py
lab5/launch/: lab5.launch.py  oint.launch.py
lab5/urdf/: robot_lab2_bup.urdf.xml
lab5_interfaces/: CMakeLists.txt  package.xml
lab5_interfaces/srv/: InvKin.srv
log/: latest_build
py_key_control/: package.xml  setup.cfg  setup.py
py_key_control/launch/: key_control.launch.py
py_key_control/py_key_control/: py_key_control_pub.py
py_pubsub/: package.xml  setup.py
urdf_lab2/: dh_table.csv  matrix.py  package.xml  setup.py
urdf_lab2/launch/: robot_lab2.launch.py
urdf_lab2/urdf/: robot_lab2.rviz  rviz_launch.xml
urdf_lab2/urdf_lab2/: dh_table.csv  matrix.py  parts_params.json  robot_lab2.urdf.xml  robot_lab2_fixed.urdf.xml  robot_lab2_joint.urdf.xml  rpy_calculate.py  urdf_params.yaml  urdf_values.yaml
urdf_lab2b/: setup.cfg  setup.py
urdf_lab2b/launch/: joint_publisher.launch.py  (+1 more)
(+19 files in other folders)
